2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Add the missing case of "below vowel + tone mark".

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (static data, idxVowelToneMark):
	  - Move static data definitions to near FilterLatex::AdjustText().
	  - Rearrange the data so that 3 sets of characters are handled
	    separately (top marks, above marks, below marks).
	  - Split idxVowelToneMark() into idxTopMark(), idxAboveMark() and
	    idxBelowMark(); make them return -1 on failure, for easy data
	    management.
	  - Replace all 8-bit codes with hex.
	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Call the classifiers and use the data under new convention.
	  - Fix bug for the case of below vowels under Do Chada, To Patak.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Guard against buffer overflow on extra char (Sara-Aa).
	  - Change boundary checking condition, to improve the chance of
	    optimization.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Get rid of "chgchar" var by just writing output first and
	    overwriting it later.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Add "output_sz" arg and check to prevent buffer overflow.
	  - Also return total written bytes for caller to check.
	* src/filterlatex.cpp (FilterLatex::Print):
	  - Adjust call accordingly.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Drop unnecessary vars "tmpInput" and "tmpOutput".

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust source.

	* src/filterlatex.cpp (FilterLatex::Print):
	  - Use stack array instead of heap allocation for output buffer.